# labs-csv-json-sm

./: Cargo.toml  Makefile  README.md  SmartModule.toml
src/: lib.rs
test-data/: output.json  small.csv  small.json  test.json
test-data/comma/: input.csv
test-data/semicolon/: output.json
test-data/semicolon-camel/: output.json
tests/: e2e.rs
