[package]
name = "csv-json"
version = "0.1.0"
authors = ["InfinyOn Team <team@infinyon.com>"]
edition = "2021"

[lib]
crate-type = ['cdylib']

[dependencies]
csv = "1.2.2"
fluvio-smartmodule = "0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[profile.release-lto]
inherits = "release"
lto = true
strip = "symbols"
